src/test/ui/imports/import4.stderr
error[E0432]: unresolved import `a::foo`
  --> $DIR/import4.rs:5:17
   |
LL | mod b { pub use a::foo; }
   |                 ^^^^^^ no `foo` in `a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
